--- a/configs/.dev.env
+++ b/configs/.dev.env
@@ -5,4 +5,5 @@ SSL_PATH=""
 PRIVATE_KEY='./configs/jwt/ecdsa-p521-private.pem'
 PUBLIC_KEY='./configs/jwt/ecdsa-p521-public.pem'
 SECRET_KEY='somesupersecretkey'
-
+USER_NAME='xxxx'
+PASSWORD='xxxx'
